--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
 sonar.projectKey=deepak
 # sonar.sources=.
-# sonar.exclusions=node_modules/**,dist/**,coverage/**
+sonar.exclusions=node_modules/**,dist/**,coverage/**
